tests/snapshots/execution_spec__accept-header-compliance.md_test_0.snap
---
source: tests/execution_spec.rs
expression: response
---
{
  "status": 406,
  "headers": {},
  "body": {
    "message": "Missing the 'Accept' header in the request"
  }
}
