tests/snapshots/execution_spec__add-field-index-list.md_client.snap
---
source: tests/execution_spec.rs
expression: client
---
scalar Date

scalar Email

scalar JSON

scalar PhoneNumber

type Query {
  username: String
  users: [User]
}

scalar Url

type User {
  name: String
}

schema {
  query: Query
}
