tests/snapshots/execution_spec__add-field-index-list.md_merged.snap
---
source: tests/execution_spec.rs
expression: merged
---
schema {
  query: Query
}

type Query @addField(name: "username", path: ["users", "0", "name"]) {
  users: [User] @http(baseURL: "http://jsonplaceholder.typicode.com", path: "/users")
}

type User {
  name: String
}
