tests/snapshots/execution_spec__add-field-many.md_client.snap
---
source: tests/execution_spec.rs
expression: client
---
scalar Date

scalar Email

scalar Empty

type Foo {
  a: String
  b: String
  c: String
  name: String
  x: X
}

scalar JSON

scalar PhoneNumber

type Query {
  user: Foo
}

scalar Url

type X {
  a: String
  b: String
  c: String
}

schema {
  query: Query
}
