tests/snapshots/execution_spec__add-field-modify.md_assert_0.snap
---
source: tests/execution_spec.rs
expression: response
---
{
  "status": 200,
  "headers": {
    "content-type": "application/json"
  },
  "body": {
    "data": {
      "user": {
        "city": "Gwenborough",
        "name": "foo",
        "street": "Kulas Light",
        "zipcode": "92998-3874"
      }
    }
  }
}