tests/snapshots/execution_spec__add-field-with-composition.md_assert_0.snap
---
source: tests/execution_spec.rs
expression: response
---
{
  "status": 200,
  "headers": {
    "content-type": "application/json"
  },
  "body": {
    "data": {
      "lat": "-37.3159"
    }
  }
}